[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.23",
    "torch>=2.0",
    "GitPython"
]
build-backend = "setuptools.build_meta"
python_requires = ">=3.7"

[project]
name = "nnpops"
version = "0.5"
dependencies = [
    "numpy",
    "torch>=2.0",
    "torchani>=2.2"
]
[project.optional-dependencies]
test = ["pytest>=5.0"]